--- a/Librus/Widoki/Administracja/DodawanieUzytkownika.xaml
+++ b/Librus/Widoki/Administracja/DodawanieUzytkownika.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Librus.Widoki.Administracja.DodawanieUzytkownika"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-       Title="Dodawanie użytkownika" Height="570" Width="600" Background="#1d1d1d" >    
+       Title="Dodawanie użytkownika" Height="570" Width="600" Background="#1d1d1d" >
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -28,8 +28,7 @@
                   VerticalAlignment="Center"  Width="Auto" TextChanged="TextBoxEmail_TextChanged" />
         <Label x:Name="lblRola" Content="Rola:"  Style="{StaticResource labelStyle}"  HorizontalAlignment="Right" Margin="0,0,10,0"
                Grid.Row="0" VerticalAlignment="Center"/>
-        <TextBox x:Name="txtKlasa"  IsEnabled="False"  Style="{StaticResource txtStyle}" Grid.Column="1" HorizontalAlignment="Stretch" Height="30" Margin="0,0,30,0" Grid.Row="4" TextWrapping="NoWrap"
-                  VerticalAlignment="Center"  Width="Auto" TextChanged="TxtKlasa_TextChanged" />
+
         <Label x:Name="lblKlasa"  Content="Klasa:"  Style="{StaticResource labelStyle}"  HorizontalAlignment="Right" Margin="0,0,10,0"
                Grid.Row="4" VerticalAlignment="Center"/>
         <TextBox x:Name="txtDziecko"  IsEnabled="False" Style="{StaticResource txtStyle}" Grid.Column="1" HorizontalAlignment="Stretch" Height="30" Margin="0,0,30,0" Grid.Row="5" TextWrapping="NoWrap"
@@ -45,30 +44,30 @@
 
             <ComboBoxItem >
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="C:/Users/aneta/Desktop/profile.jpg" />
+                    <!--<Image Source="C:/Users/aneta/Desktop/profile.jpg" />-->
                     <TextBlock Margin="5,0,0,0">Administrator</TextBlock>
                 </StackPanel>
             </ComboBoxItem>
             <ComboBoxItem>
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="C:/Users/aneta/Desktop/profile.jpg" />
+                   
                     <TextBlock Margin="5,0,0,0">Nauczyciel</TextBlock>
                 </StackPanel>
             </ComboBoxItem>
             <ComboBoxItem>
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="C:/Users/aneta/Desktop/profile.jpg" />
+                    
                     <TextBlock Margin="5,0,0,0">Rodzic</TextBlock>
                 </StackPanel>
             </ComboBoxItem>
             <ComboBoxItem>
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="C:/Users/aneta/Desktop/profile.jpg" />
+                    <!--<Image Source="C:/Users/aneta/Desktop/profile.jpg" />-->
                     <TextBlock Margin="5,0,0,0">Uczen</TextBlock>
                 </StackPanel>
             </ComboBoxItem>
         </ComboBox>
-        
+
         <Button x:Name="btnDodaj" IsDefault="True"  Content="DODAJ" Height="40" Style="{StaticResource buttonStyle }"  
                 VerticalAlignment="Bottom"  Padding="0" Margin="223,0,30,26" Grid.Row="6" Grid.Column="1" Click="Dodaj_Click"/>
         <Button x:Name="btnAnuluj" IsCancel="True" Content="ANULUJ" Height="40" Style="{StaticResource buttonStyle }"  
@@ -79,6 +78,7 @@
         <Label x:Name="errRola"  Style="{StaticResource errStyle}" Grid.Column="1" Height="30" HorizontalAlignment="Stretch" Margin="0,0,30,0" Grid.Row="0" VerticalAlignment="Bottom" Width="365"/>
         <Label x:Name="errKlasa" Visibility="Hidden"  Style="{StaticResource errStyle}" Grid.Column="1" Height="30" HorizontalAlignment="Stretch" Margin="0,0,30,0" Grid.Row="4" VerticalAlignment="Bottom" Width="365"/>
         <Label x:Name="errDziecko" Visibility="Hidden"  Style="{StaticResource errStyle}" Grid.Column="1" Height="30" HorizontalAlignment="Stretch" Margin="0,0,30,0" Grid.Row="5" VerticalAlignment="Bottom" Width="365"/>
+        <ComboBox x:Name="comboKlasa" Grid.Column="1" HorizontalAlignment="Stretch" IsEnabled="False"  Height="30" Margin="0.4,24,30.6,0"  Grid.Row="4" VerticalAlignment="Top" Width="365" SelectionChanged="ComboKlasaSelectionChanged" />
     </Grid>
 
 </Window>
