--- a/Librus/Widoki/OknoGlowneNauczyciel.xaml
+++ b/Librus/Widoki/OknoGlowneNauczyciel.xaml
@@ -1,18 +1,18 @@
 ﻿<Window x:Class="Librus.Widoki.OknoGlowneNauczyciel"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-           Title="" Height="316.364" Background="#1d1d1d" Width="351.273">
+           Title="Okno główne" Height="316.364" Background="#1d1d1d" Width="351.273">
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="27*"/>
                 <RowDefinition Height="116*"/>
             </Grid.RowDefinitions>
-            <Button Name="obecnosciBtn" Content="OBECNOŚCI" Style="{StaticResource buttonStyle}" HorizontalAlignment="Left" Margin="95,32.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="128" Height="50" Click="ObecnosciBtnClick"/>
-            <Button Name="wylogujBtn" Content="WYLOGUJ" Style="{StaticResource buttonStyle}" BorderBrush="#5a5a5a" Background="#5a5a5a"  HorizontalAlignment="Left" Margin="95,164.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="128" Height="47" Click="wylogujBtn_Click"/>
+            <Button Name="obecnosciBtn" Content="OBECNOŚCI" Style="{StaticResource buttonStyle}" HorizontalAlignment="Left" Margin="95,18.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="128" Height="50" Click="ObecnosciBtnClick"/>
+            <Button Name="wylogujBtn" Content="WYLOGUJ" Style="{StaticResource buttonStyle}" BorderBrush="#5a5a5a" Background="#5a5a5a"  HorizontalAlignment="Left" Margin="95,165.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="128" Height="47" Click="wylogujBtn_Click"/>
             <Label Content="Zalogowany jako: " Style="{StaticResource labelStyle}" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="114" Height="29"/>
             <Label Name="nazwaLbl" Style="{StaticResource labelStyle}" HorizontalAlignment="Left" Margin="129,10,0,8.4" Width="193"/>
-            <Button Name="ocenyBtn" Content="OCENY" Style="{StaticResource buttonStyle}" BorderBrush="#a1a1a1" Background="#a1a1a1" HorizontalAlignment="Left" Margin="95,98.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="128" Height="44" Click="OcenyBtnClick"/>
+            <Button Name="ocenyBtn" Content="OCENY" Style="{StaticResource buttonStyle}" BorderBrush="#a1a1a1" Background="#a1a1a1" HorizontalAlignment="Left" Margin="95,93.6,0,0" Grid.Row="1" VerticalAlignment="Top" Width="128" Height="49" Click="OcenyBtnClick"/>
         </Grid>
     </Grid>
 </Window>
