--- a/Librus/Widoki/WyswietlanieOcen.xaml
+++ b/Librus/Widoki/WyswietlanieOcen.xaml
@@ -1,22 +1,24 @@
 ﻿<Window x:Class="Librus.Widoki.WyswietlanieOcen"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Oceny" Height="582" Width="624" Background="#1d1d1d">
-    <Grid>
+        Title="Oceny" Height="380.209" Width="624" Background="#1d1d1d">
+    <Grid Margin="0,0,-0.4,-0.6">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="496*"/>
+            <RowDefinition Height="Auto" MinHeight="49.6"/>
+
+            <RowDefinition/>
+
         </Grid.RowDefinitions>
-        <DataGrid Name="ocenyDataGrid" CanUserAddRows="False" IsReadOnly="True" AutoGenerateColumns="False" VerticalAlignment="Top" Style="{DynamicResource DataGridStyle}" HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="1" GridLinesVisibility="Vertical" FontFamily="Segoe Ui Light" HeadersVisibility="Column" Foreground="Silver" RowBackground="#2a2a2a"
+        <DataGrid Name="ocenyDataGrid" CanUserAddRows="False" IsReadOnly="True" AutoGenerateColumns="False" VerticalAlignment="Top" Style="{DynamicResource DataGridStyle}" HorizontalAlignment="Left" Margin="10,9.4,0,0" GridLinesVisibility="Vertical" FontFamily="Segoe Ui Light" HeadersVisibility="Column" Foreground="Silver" RowBackground="#2a2a2a"
 			AlternatingRowBackground="DimGray" RowHeight="20" 
-			BorderBrush="#1d1d1d" Background="#1d1d1d" Height="466" Width="596">
+			BorderBrush="#1d1d1d" Background="#1d1d1d" Height="270" Width="596" Grid.Row="1">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Przedmiot " Binding="{Binding Przedmiot.Nazwa}" />
                 <DataGridTextColumn Header=" Oceny" Binding="{Binding Oceny}"/>
             </DataGrid.Columns>
         </DataGrid>
         <Label Name="uczenLbl" Content="Wybór dziecka:" Visibility="Hidden" Style="{DynamicResource labelStyle}" HorizontalAlignment="Left" Margin="10,15,0,0" VerticalAlignment="Top" Height="30" Width="105"/>
-        <ComboBox Name="uczenComboBox" Visibility="Hidden" HorizontalAlignment="Left" Margin="145,15,0,15" VerticalAlignment="Top" Width="160" Height="25" SelectionChanged="UczenComboBoxSelectionChanged"/>
+        <ComboBox Name="uczenComboBox" Visibility="Hidden" HorizontalAlignment="Left" Margin="145,15,0,0" VerticalAlignment="Top" Width="160" Height="25" SelectionChanged="UczenComboBoxSelectionChanged"/>
 
     </Grid>
 </Window>
